# olx_scraper

./: .gitignore  pyproject.toml  readme.md  run.py  run_config_example.yaml
infra/: README.md  aws-budget.json  bootstrap.sh
infra/athena/: workgroup.json
infra/iam/: analyst-policy.json  eventbridge-stepfn-role-policy.json  home-box-policy.json  stepfn-execution-role-policy.json
olx_scraper/: items.py  middlewares.py  models.py  pipelines.py  settings.py
olx_scraper/spiders/: ad_spider.py  catalog_spider.py
