[project]
name = "olx-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "patchright>=1.59.1",
    "pyyaml>=6.0.3",
    "scrapy>=2.16.0",
    "scrapy-playwright>=0.0.46",
    "six>=1.17.0",
    "sqlalchemy>=2.0.49",
]
